# certbot-dns-synergy-wholesale

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  certbot_dns_synergy_wholesale.py  credentials.ini.example  credentials.ini.exemple  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  python-publish.yml  release-please.yml
tests/: conftest.py  test_synergy_wholesale.py
