[tool.poetry]
name = "certbot-dns-synergy-wholesale"
version = "1.0.1"
description = "A synergy wholesale dns plugin for cerbot to authenticate and retrieve letsencrypt certificates"
authors = ["Nicholas Ciechanowski <nicholasaciechanowski@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ALameLlama/certbot-dns-synergy-wholesale"

packages = [{ include = "certbot_dns_synergy_wholesale.py" }]

[tool.poetry.dependencies]
python = "^3.10"
certbot = "^2.8.0"
zeep = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."certbot.plugins"]
"dns-synergy-wholesale" = "certbot_dns_synergy_wholesale:Authenticator"
