[project]
name = "certbot-dns-synergy-wholesale"
version = "1.1.0"
description = "A Synergy Wholesale DNS plugin for Cerbot to authenticate and retrieve Lets Encrypt certificates"
authors = [
    { name = "Nicholas Ciechanowski", email = "nicholas@ciech.anow.ski" },
]
requires-python = "~=3.10.0"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "certbot>=4",
    "publicsuffixlist>=1.0.2.20250710",
    "zeep>=4.2.1,<5",
]

[project.urls]
Repository = "https://github.com/ALameLlama/certbot-dns-synergy-wholesale"

[project.entry-points."certbot.plugins"]
dns-synergy-wholesale = "certbot_dns_synergy_wholesale:Authenticator"

[tool.hatch.build.targets.sdist]
include = ["certbot_dns_synergy_wholesale.py"]

[tool.hatch.build.targets.wheel]
include = ["certbot_dns_synergy_wholesale.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
